# Simple

./: .clang-format  .gitignore  CMakeLists.txt  Chess.sln  Doxyfile.doxygen  README.md
.SPRT/: games.pgn  output.txt  run_psqrt.bat
.github/workflows/: ci-ctests.yml
Chess/: AlphaBeta.h  Array.h  AttackMap.txt  Attacks.cpp  Attacks.h  BitBoard.h  BitScan.h  Chess.common.settings  Chess.vcxproj  Chess.vcxproj.filters  Color.txt  Concepts.h  Conditions.h  DebugInfo.h  Evaluation.cpp  Evaluation.h  Evaluator.h  ExitCondition.h  HashTable.h  Hasher.h  IterationInfo.h  KillerTable.h  Move.h  MoveFactory.h  MoveGenerator.cpp  MoveGenerator.h  MovePicker.cpp  MovePicker.h  MovePrinter.h  PSQT.h  PVTable.cpp  PVTable.h  Perft.cpp  Perft.h  Piece.h  Pieces.txt  Player.h  Position.cpp  Position.h  Position.txt  (+30 more)
Chess/Moves/: Imove1.txt  Imove2.txt  Imove3.txt  Imove4.txt  Imove5.txt  Omove1.txt  Omove2.txt  Omove3.txt
TestGeneratorFromEPD/: TestGeneratorFromEPD.cpp  TestGeneratorFromEPD.vcxproj  TestGeneratorFromEPD.vcxproj.filters
Tests/: AttackMapTests.cpp  BitBoardTest.cpp  CMakeLists.txt  ChessEngineTests.cpp  MoveGeneratorTests.cpp  PositionTests.cpp  Tests.cpp  Tests.vcxproj  WinAtChess.epd  WinAtChess.test  converter.py  test.cpp
enc_temp_folder/1585ab7693ab2d734ca4c253cdecd913/: positionGenerator.cpp
